# PyConLT2025

./: README.md
LangFlow/: Basic Prompting.json
weather/: FIXME.md
workshop 3/: .gitignore  Dockerfile.dbmigrations  Dockerfile.feast
workshop 3/chart/: Chart.yaml  values.yaml
workshop 3/chart/templates/clickhouse/: clickhouse-installation.yaml
workshop 3/chart/templates/cronjobs/: db-data-aggregation.yaml  db-data-ingestion.yaml  feast-materialize.yaml  training-cronjob.yaml
workshop 3/chart/templates/deployments/: api.yaml  feast-server.yaml
workshop 3/chart/templates/jobs/: db-migrations-clickhouse.yaml  db-migrations-postgres.yaml  feast-apply.yaml
workshop 3/chart/templates/services/: api.yaml  feast-server.yaml
workshop 3/pycondemo/: README.md  feature_repo.py  feature_store.yaml  pyproject.toml
workshop 3/pycondemo/db_migrations_clickhouse/: 00001_raw_data.sql  00002_feature_data.sql  00003_raw_data_nodes.sql  00004_feature_data_nodes_agg.sql
workshop 3/pycondemo/db_migrations_postgres/: 00001_feast_db.py  00002_mlflow_db.py
workshop 3/pycondemo/src/api/: api.py
workshop 3/pycondemo/src/data/: aggregate_data.py  generate_data.py  insert_data.py
workshop 3/pycondemo/src/db_utils/: clickhouse.py
workshop 3/pycondemo/src/feast_utils/: feast_materialize.py
workshop 3/pycondemo/src/model/: train_model.py
